# cpp4py-wip

./: CMakeLists.txt  README.md  Vagrantfile  bootstrap.sh
src/: CMakeLists.txt  design-fixed.cpp  design-fixed.h  design.cpp  design.h  image.cpp  image.h  rvo-fixed.cpp  rvo-fixed.h  rvo.cpp  rvo.h  singleton.cpp  singleton.h  temporary-fixed.cpp  temporary-fixed.h  temporary.cpp  temporary.h
src/executables/: CMakeLists.txt  catch-main.cpp  design-fixed-main.cpp  design-main.cpp  inheritance.cpp  inheritance.py  lambda-main.cpp  rvo-fixed-main.cpp  rvo-main.cpp  singleton-main.cpp  sort-main.cpp  temporary-fixed-main.cpp  temporary-main.cpp  typedef-main.cpp
